--- a/deploy/cert-manager-webhook-vultr/templates/rbac.yaml
+++ b/deploy/cert-manager-webhook-vultr/templates/rbac.yaml
@@ -52,6 +52,45 @@ subjects:
     name: {{ include "cert-manager-webhook-vultr.fullname" . }}
     namespace: {{ .Release.Namespace }}
 ---
+# Fix an issue w.r.t. the service account accessing flowcontrol
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: {{ include "cert-manager-webhook-vultr.fullname" . }}:flowcontrol-solver
+  labels:
+    app: {{ include "cert-manager-webhook-vultr.name" . }}
+    chart: {{ include "cert-manager-webhook-vultr.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+rules:
+  - apiGroups:
+      - "flowcontrol.apiserver.k8s.io"
+    resources:
+      - "prioritylevelconfigurations"
+      - "flowschemas"
+    verbs:
+      - "list"
+      - "watch"
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: {{ include "cert-manager-webhook-vultr.fullname" . }}:flowcontrol-solver
+  labels:
+    app: {{ include "cert-manager-webhook-vultr.name" . }}
+    chart: {{ include "cert-manager-webhook-vultr.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: {{ include "cert-manager-webhook-vultr.fullname" . }}:flowcontrol-solver
+subjects:
+  - apiGroup: ""
+    kind: ServiceAccount
+    name: {{ include "cert-manager-webhook-vultr.fullname" . }}
+    namespace: {{ .Release.Namespace }}
+---
 # Grant cert-manager permission to validate using our apiserver
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
